# Metaheuristics

./: .gitmodules  CMakeLists.txt  avg_distance  dist_avg_no_limit  file_list_atsp  file_list_tsp  format_list.py  iterations_100_problems_sizes_100.json  iterations_100_problems_sizes_100_no_limit.json  iterations_100_problems_sizes_100_stats.json  iterations_100_problems_sizes_100_stats_no_limit.json  iterations_1_fast_problems_sizes_100.json  limited_solutions.json  solutions  solutions.json  test  test.json  test_serialized  tsp_solutions.json  unlimited_solutions.json  unlimited_solutions.json.json  unlimited_solutions.jsonerrors.json  unlimited_solutions.jsonerros_avg.json
lib_mingw/cmake/SFML/: SFMLSharedTargets-debug.cmake  SFMLSharedTargets-release.cmake  SFMLStaticTargets-debug.cmake  SFMLStaticTargets-release.cmake
src/: main.cpp  util.cpp  util.h
src/experiments/: testRandomTS.h  testTs.py
src/neighborhoods/: Insert.cpp  Insert.h  Invert.cpp  Invert.h  Neighborhood.cpp  Neighborhood.h  Swap.cpp  Swap.h  TwoOptNeighborhood.cpp  TwoOptNeighborhood.h
src/solver/: DummySolver.cpp  DummySolver.h  ExtNearestNeighbour.cpp  ExtNearestNeighbour.h  K_RandomSolver.cpp  K_RandomSolver.h  NearestNeighbour.cpp  NearestNeighbour.h  Solver.cpp  Solver.h  TS_long_term_mem.cpp  TS_long_term_mem.h  TabuSearch.cpp  TabuSearch.h  TwoOptSolver.cpp  TwoOptSolver.h
src/solver/genetic/: Crossover.cpp  Crossover.h  Genetic.cpp  Genetic.h  Mutation.cpp  Mutation.h
src/tsp_data/: Euc2DInstance.cpp  Euc2DInstance.h  MatrixInstance.cpp  MatrixInstance.h  Parser.cpp  Parser.h  ProblemFactory.cpp  ProblemFactory.h  TSPInstance.cpp  TSPInstance.h
src/visualization/: Visualization.cpp  Visualization.h
tests/: CMakeLists.txt  KRandom_quality.csv  KRandom_quality.py  gatherData.py  getDataFromTSP.py  setup_test.cpp  testy.txt
tests/results/: KRandom_ExtNN.csv  KRandom_ExtNN.py  KRandom_ExtNN2.csv  KRandom_ExtNN2.py  KRandom_NN.csv  KRandom_NN2.csv  KRandom_quality.csv  KRandom_quality.py  Krandom_NN.py  Kranodm_NN2.py  NN_ExtNN.csv  NN_ExtNN.py
